added yellow header color

--- a/style.css
+++ b/style.css
@@ -6,10 +6,41 @@
 
 body {
   margin: 0;
-  background-color: darkolivegreen;
+  background-color: palevioletred;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 h1 {
-  color: purple;
-  border: 2px solid teal;
+  color: yellow;
+  border: 5px solid teal;
+  font-size: 10em;
+  border-radius: 15px;
+  padding: 1em;
+}
+
+.btn {
+  border: none;
+  outline: 2px solid;
+  padding: 3em 1.2em;
+  text-align: center;
+  text-justify: auto;
+  width: 6em;
+  height: 2.5em;
+  border-radius: 5em;
+  font-size: large;
+}
+
+.btn-large {
+  width: 14em;
+  height: 3.5em;
+  outline: 3px soild;
+  padding: 3.5em 1.8em;
+}
+
+.btn-red {
+  color: white;
+  background-color: tomato;
 }
