--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 h1 {
   color: yellow;
-  border: 5px solid blue;
+  border: 5px solid turquoise;
   font-size: 10em;
   border-radius: 15px;
   padding: 1em;
